[tool.poetry]
name = "chatango-async"
version = "0.0.1"
description = "Async Chatango Client Library."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/toddbirchard/chatango-async/"
repository = "https://github.com/toddbirchard/chatango-async/"
documentation = "https://github.com/toddbirchard/chatango-async/blob/master/README.md"
keywords = ["Chatango", "Chatbot", "Chat", "Bot", "Python"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
asyncio = "*"
aiohttp = "*"
pytest = "*" 
black = "*"
isort = "*"
flake8 = "*"
pylint = "*"
loguru = "*"
python-dotenv = "*"
pydantic = "*"
pydantic-settings = "*"
coverage = "^7.3.2"

[tool.poetry.scripts]
run = "example"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/chatango-async/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["chatango", "example", "config", "logger"]

[tool.black]
line-length = 120

[tool.pylint.'MESSAGES CONTROL']
disable = "C0103,C0301,W0703,W0621"
